Fixed column alignment

--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@
 /*font-family: 'Nippo-Bold';*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap');
 /*font-family: 'Roboto Mono', monospace; */
-/* @import url("https://use.typekit.net/ril2vdl.css");; /*font-family: "neue-haas-grotesk-display"*/
-/* @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400'); /*font-family: Inter*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 /*font-family: 'Roboto', sans-serif;*/
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500&display=swap'); /*font-family: 'Space Grotesk', sans-serif;
@@ -13,8 +11,8 @@
 /* for mobile */
 @media (min-width: 375px) {
     main {
-        margin-left: 40px;
-        margin-right: 40px;
+        margin-left: 30px;
+        margin-right: 30px;
     }
 
     h1 {
@@ -34,10 +32,10 @@
     }
 
     p {
-        font-size: 1.1rem;
-        line-height: 1.8rem;
-        /*padding-bottom: 30px;*/
+        font-size: 1rem;
+        line-height: 1.6rem;
         width: 100%;
+        padding-bottom: 15px;
     }
 
     a:not([href^="#"]) {
@@ -50,6 +48,7 @@
         line-height: 2.7rem;
         padding-top: 100px;
         padding-bottom: 100px;
+        justify-content: center;
     }
 
     .source {
@@ -59,46 +58,19 @@
     ol {
         min-height: 300px;
         display: flex;
-        /*justify-content: right;
-        text-align: center;*/
-    }
-
-    li:nth-child(1) ,
-    li:nth-child(3) {
-        text-align: left;
-    }
-
-    li:nth-child(4),
-    li:nth-child(5),
-    li:nth-child(7) {
-        text-align: center;
-    }
-
-    li:nth-child(2),
-    li:nth-child(6),
-    li:nth-child(8),
-    li:nth-child(9) {
-        text-align: right;
-    }
-
-    li:last-child {
         text-align: center;
         justify-content: center;
+        margin-left: 10%;
     }
 }
 
 
 /* for tablet */
 @media (min-width: 600px) {
-    /*main {
-        margin-left: 45%;
-        margin-right: 5%;
-    }*/
-
-    /*main {
-        flex:50%;
-        margin-left: 500px;
-    }*/
+    main {
+        margin-left: 70px;
+        margin-right: 70px;
+    }
 
     h1 {
         font-size: 8rem;
@@ -109,7 +81,7 @@
         font-size: 2.1rem;
         padding-top: 70px;
         padding-bottom: 40px;
-        margin-left: 60%;
+        width: 60%;
     }
 
     h3 {
@@ -120,22 +92,24 @@
         font-size: 1.2rem;
         line-height: 2rem;
         padding-bottom: 30px;
-        margin-left: 60%;
+        width: 70%;
     }
 
     a:not([href^="#"]) {
         font-size: 1.3rem;
         font-weight: 200;
     }
+    
+    ol { 
+    justify-content: left;
+    }   
 
     blockquote {
         font-size: 3.2rem;
         line-height: 3.7rem;
         padding-top: 100px;
         padding-bottom: 100px;
-        margin-left: 60%;
     }
-
 
     .source {
         font-size: 0.9rem;
@@ -144,10 +118,10 @@
 
 /* for desktop */
 @media (min-width: 1280px) {
-    /*main {
-        margin-left: 50%;
-        margin-right: 5%;
-    }*/
+    main {
+        margin-left: 100px;
+        margin-right: 100px;
+    }
 
     h1 {
         font-size: 10rem;
@@ -163,7 +137,7 @@
         font-size: 2.8rem;
         padding-top: 80px;
         padding-bottom: 50px;
-        /*width: 100%;*/
+        width: 40%;
     }
 
     h3 {
@@ -181,7 +155,7 @@
         font-size: 1.5rem;
         line-height: 2.2rem;
         padding-bottom: 30px;
-        margin-left: 60%;
+        width: 60%;
     }
 
     a:not([href^="#"]) {
@@ -193,8 +167,6 @@
         font-size: 3.5rem;
         padding-top: 100px;
         padding-bottom: 100px;
-        padding-right: 15%;
-        margin-left: 60%;
     }
 
     .source {
@@ -206,10 +178,8 @@
 
 header {
     background-image: linear-gradient(rgb(1, 1, 213), rgb(0, 10, 87));
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
 }
-
-
 
 body {
     color: black;
@@ -246,37 +216,6 @@ h1 {
     padding-right: 20px;
 }
 
-/*
-.author {
-    font-family: 'Roboto Mono';
-    display: inline;
-    text-align: center;
-    width: 100px;
-    margin-top: 10px;
-    margin-left: 100px;
-    margin-right: 100px;
-    padding: 5px;
-
-.author {
-    display: inline-block;
-    width: 100%;
-}
-
-section:nth-child(2) p {
-    display: inline-block;
-}
-
-section:nth-child(1) p {
-	display: inline-block;
-    margin-top: 10px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 80px;
-    padding: 5px;
-	white-space: pre;
-    width: 100px;
-} }*/
-
 /* chapters */
 .nav {
     font-family: 'Roboto Mono';
@@ -292,6 +231,34 @@ blockquote {
     font-family: 'Times New Roman';
 
 }
+
+ol {
+    min-height: 300px;
+    display: flex;
+}
+
+li:nth-child(1),
+li:nth-child(3) {
+     text-align: left;
+}
+
+li:nth-child(4),
+li:nth-child(5),
+li:nth-child(7) {
+    text-align: center;
+}
+
+li:nth-child(2),
+li:nth-child(6),
+li:nth-child(8),
+li:nth-child(9) {
+    text-align: right;
+}
+
+li:last-child {
+    text-align: center;
+    justify-content: center;
+    }
 
 h2 {
     font-family: 'Roboto Mono';
